--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,10 @@
 PORT = 3000
 IP = 127.0.0.1
-DB_URL = mongodb://localhost:27107/3quilibrium
+DB_URL = mongodb://localhost:27017/equilibrium
+ACL = true
+REDIS_HOST = 127.0.0.1
+REDIS_PORT = 6379
+REDIS_USER = default
+REDIS_PASSWORD = password
+COOKIE_NAME = connect.sid
+SESSION_SECRET = $e$$!0n_p@$$w0rd
