--- a/models/settings.json
+++ b/models/settings.json
@@ -1,15 +1,1 @@
-{
-    "office": {
-        "start": "08:00",
-        "end": "20:00"
-    },
-    "lunch": {
-        "start": "14:00",
-        "end": "15:00"
-    },
-    "snacks": {
-        "start": "18:00",
-        "end": "18:30"
-    },
-    "meditation": true
-}
+{"color":{"text":{"primary":"#000000","secondary":"#ffffff"},"button":{"primary":"#555555","secondary":"#000000"}},"office":{"start":"11:00","end":"19:30"},"lunch":{"start":"13:30","end":"14:30"},"snacks":{"start":"17:00","end":"17:30"},"meditation":true}
