--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-PORT = 3000
+PORT = 8080
 IP = 127.0.0.1
-DB_URL = mongodb://localhost:27017/equilibrium
+DB_URL = mongodb://localhost:27017/3quilibrium
 ACL = true
 REDIS_HOST = 127.0.0.1
 REDIS_PORT = 6379
@@ -8,3 +8,5 @@ REDIS_USER = default
 REDIS_PASSWORD = password
 COOKIE_NAME = connect.sid
 SESSION_SECRET = $e$$!0n_p@$$w0rd
+BASE_URL = https://localhost:8080
+COMPANY_LOGO = https://localhost:8080/shared/medias/innovaccer.png
