[bug] cannot set meditation off in settings

--- a/models/settings.json
+++ b/models/settings.json
@@ -1,25 +1,1 @@
-{
-  "color": {
-    "text": {
-      "primary": "#000000",
-      "secondary": "#ffffff"
-    },
-    "button": {
-      "primary": "#555555",
-      "secondary": "#000000"
-    }
-  },
-  "office": {
-    "start": "11:00",
-    "end": "19:30"
-  },
-  "lunch": {
-    "start": "13:30",
-    "end": "14:30"
-  },
-  "snacks": {
-    "start": "17:00",
-    "end": "17:30"
-  },
-  "meditation": true
-}
+{"color":{"text":{"primary":"#ff0000","secondary":"#ffffff"},"button":{"primary":"#007bff","secondary":"#000000"}},"office":{"start":"00:00","end":"23:59"},"lunch":{"start":"13:30","end":"14:30"},"snacks":{"start":"17:00","end":"17:30"},"meditation":true}
